make sidebar position:fixed again but remove overflow:auto

--- a/rails/public/stylesheets/sidebar.css
+++ b/rails/public/stylesheets/sidebar.css
@@ -11,7 +11,7 @@
 
 
 #sidebar {
-  overflow: auto;
+  position: fixed;
   width: 10em;
   min-width: 100px;
   height: 100%;
